--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.6'
+    testImplementation 'com.h2database:h2:2.1.214'
 }
 
 tasks.named('test') {
