--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=lien
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lien_db?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=secretj
-spring.datasource.password=test!
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${MYSQL_DATABASE:lien_db}?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER:secretj}
+spring.datasource.password=${MYSQL_PASSWORD:test!}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Redis Configuration
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET_KEY:default-secret-key}
+jwt.expiration=${JWT_EXPIRATION_MS:3600000}
