feat : 여행 계획 템플릿 사이트 제ㅏㄱ

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# JWT Test Configuration
+jwt.secret=test-secret-key-for-testing-purposes-minimum-256-bits-required
+jwt.expiration=3600000
+
+# Redis Test Configuration (embedded or disabled)
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# JPA Auditing
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
